<resources>
    <string name="app_name">UniKo Mensa</string>
    <string name="menu_item_icon_description">Icon for the menu item</string>
    <string name="menu_item_title_placeholder">Menü 1</string>
    <string name="menu_item_description_placeholder">This is a placeholder for the description of a menu item with a long text</string>
    <string name="previous_week">Previous Week</string>
    <string name="next_week">Next Week</string>
    <string name="refresh">Refresh</string>
</resources>
