<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/prev_week"
        android:icon="@drawable/ic_navigate_before_white_24dp"
        android:title="@string/previous_week"
        android:visible="false"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/next_week"
        android:icon="@drawable/ic_navigate_next_white_24dp"
        android:title="@string/next_week"
        android:visible="false"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="always"
        />
</menu>