<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/menu_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"
        android:contentDescription="@string/menu_item_icon_description"
        android:adjustViewBounds="true"
        android:src="@drawable/menu1"
        />

    <TextView
        android:id="@+id/menu_item_second_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/menu_item_icon"
        android:layout_toEndOf="@id/menu_item_icon"
        android:text="@string/menu_item_description_placeholder"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/menu_item_first_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/menu_item_second_line"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/menu_item_icon"
        android:layout_toEndOf="@id/menu_item_icon"
        android:text="@string/menu_item_title_placeholder"
        android:textSize="16sp" />

</RelativeLayout>